--- a/index.html
+++ b/index.html
@@ -6,10 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Score Keeper</title>
+
+    <style>
+        .winner {
+            color: green;
+        }
+
+        .loser {
+            color: red;
+        }
+    </style>
 </head>
 
 <body>
     <h1><span id="p1Display">0</span> to <span id="p2Display">0</span></h1>
+
+    <select name="" id="playto">
+        <option value="3">3</option>
+        <option value="5">5</option>
+        <option value="7">7</option>
+        <option value="9">9</option>
+        <option value="11">11</option>
+        <option value="13">13</option>
+    </select>
     <button id="p1Button">+1 Player One</button>
     <button id="p2Button">+1 Player Two</button>
     <button id="reset">Reset</button>
